--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.0",
-        "recoil": "^0.7.7"
+        "react-scrollable-feed": "^2.0.1",
+        "recoil": "^0.7.7",
+        "socket.io-client": "^4.7.4"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
