--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-    "dependencies": {
-    },
-    "devDependencies": {
-    },
+    "dependencies": {},
+    "devDependencies": {},
     "name": "server",
     "version": "1.0.0",
     "main": "index.js",
