--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build-client": "cd client && npm i && npm run build",
-        "build-server": "cd server && npm i && tsc",
+        "install": "cd client && npm i && cd ../server && npm i",
+        "build-client": "cd client && npm run build",
+        "build-server": "cd server && tsc",
         "build": "npm run build-client && npm run build-server",
         "start": "node server/dist/index.js"
     },
