--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
         "react-router-dom": "^6.22.0",
         "react-scrollable-feed": "^2.0.1",
         "recoil": "^0.7.7",
-        "socket.io-client": "^4.7.4"
+        "socket.io-client": "^4.7.4",
+        "tsc": "^2.0.4"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
