--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
         "path": "^0.12.7",
         "socket.io": "^4.7.4",
         "url": "^0.11.3",
-        "zod": "^3.22.4"
+        "zod": "^3.22.4",
+        "tsc": "^2.0.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
