--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "install": "npm i && cd client && npm i && cd ../server && npm i",
+        "install": " cd client && npm i && cd ../server && npm i",
         "build-client": "cd client && npm run build",
         "build-server": "cd server && tsc",
         "build": "npm run build-client && npm run build-server",
