--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "tsc": "^2.0.4"
+        "tsc": "^2.0.4",
+        "typescript": "^5.3.3"
     },
     "name": "server",
     "version": "1.0.0",
