--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
         "socket.io": "^4.7.4",
         "url": "^0.11.3",
         "zod": "^3.22.4",
-        "tsc": "^2.0.4"
+        "tsc": "^2.0.4",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
