--- a/server/package.json
+++ b/server/package.json
@@ -7,23 +7,25 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.1",
+        "morgan": "^1.10.0",
         "path": "^0.12.7",
         "socket.io": "^4.7.4",
+        "typescript": "^5.3.3",
         "url": "^0.11.3",
-        "zod": "^3.22.4",
-        "typescript": "^5.3.3"
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/morgan": "^1.9.9",
         "nodemon": "^3.0.3",
         "ts-node": "^10.9.2"
     },
     "name": "server",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "dev": "nodemon src/index.ts",
         "build": "tsc"
