--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
         "react-router-dom": "^6.22.0",
         "react-scrollable-feed": "^2.0.1",
         "recoil": "^0.7.7",
-        "socket.io-client": "^4.7.4",
-        "typescript": "^5.3.3"
+        "socket.io-client": "^4.7.4"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
@@ -34,7 +33,6 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "typescript": "^5.2.2",
         "vite": "^5.0.8"
     }
 }
