--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
         "morgan": "^1.10.0",
         "path": "^0.12.7",
         "socket.io": "^4.7.4",
-        "typescript": "^5.3.3",
         "url": "^0.11.3",
         "zod": "^3.22.4"
     },
@@ -28,7 +27,7 @@
     "main": "index.ts",
     "scripts": {
         "dev": "nodemon src/index.ts",
-        "build": "tsc"
+        "build": "npx tsc"
     },
     "author": "",
     "license": "ISC",
